1.15-test.1
- BotCommand.handleError is protected
- BotCommand.handleError shows the entire error stack
- Added new bot setting for paper trade info
- Added onModalInteraction in CommandsHandler
- Prevent potentially problematic area with Crab notifications
- Renamed PaperTrade interface to IPaperTrade to prevent conflict
- Launcher adds initializing of the paper trading handler
- Added interface for ModalCommand
- Fleshed out PaperTrade command more
- Fleshed out PaperTradeAccount with logic
- Added deserializer for paper trading file
- Fleshed out paper trading handler
- Renamed PaperTradingLeaderboard to ServerPaperTrades
- Added a breakeven feature for longs
- Fixed potential validation bug in PositionsDataHandler.getPriceData
- Added a helper method to convert BigInteger val to a double in PriceData
- Updated the settings example json
- Removed constructors from BotSettings
- Update GSON from 2.9.1 to 2.10 for record support
- Bump pom.xml